--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Video Source: https://www.youtube.com/playlist?list=PLFb6Ksc_8i0BsvjSwrOeKFE2f0iUTzewp -->
   <app-root></app-root>
 </body>
 </html>
